This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

1.22.2 (UNRELEASED)
-------------------
Bug fixes:
 - launchpad.py: Fix crash in close_duplicate() if master bug was already
   marked as a duplicate of the examined bug.

1.22.1 (2011-09-06)
-------------------
Improvements:
 - dupdb-admin: Add "removeid" command.

Bug fixes:
 - dupdb-admin: Use the in-memory CrashDB implementation for simple operations
   like dump or changeid, which do not require an actual backend. This makes
   the command work in checkouts without a /etc/apport/crashdb.conf.
 - dupdb-admin: Fix UnicodeEncodeError crash.
 - launchpad.py: Fix crash if a crash report does not have a DistroRelease.
 - Set the default "Apport" title for choice dialogs instead of the default
   apport-gtk title. Thanks Robert Roth. (LP: #608222)
 - apport-gtk: Update markup_escape_text() call to current glib. (LP: #829635)

1.22 (2011-08-25)
-----------------
Improvements:
 - Completely rework apport-retrace to use gdb's "debug-file-directory" and
   "solib-absolute-prefix" settings and only unpack the necessary packages in a
   temporary directory. This makes it possible to use it in a running system
   without actually touching installed packages, does not need any root
   privileges, and stops the requirement of using chroots with fakechroot and
   fakeroot. This is a lot easier to maintain and use, and a lot faster, too.
   As a consequence, drop the chroot module, and update crash-digger
   accordingly. See "man apport-retrace" for the new usage.
   It is now also easier to port to other packaging backends, as a lot of the
   common logic moved out of the packaging API;
   packaging.install_retracing_packages() got dropped in favor of the simpler
   packaging.install_packages().
 - crash-digger: Show how many bugs are left in the pool with each new retrace.

Bug fixes: